--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,10 @@
   
   
   
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -46,7 +50,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #000000;
+      background-color: #1A3A5C;
           background-size: 100% 100%;
     }
 
@@ -98,7 +102,7 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #000000;
+        background-color: #0D1F35;
           }
     }
   </style>
@@ -111,6 +115,12 @@
   </script>
 </head>
 <body>
+  <picture id="splash">
+      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
+      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
+      <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+  </picture>
+  
   
   
   
